# Hexe.swift

./: .gitignore  .travis.yml  Cargo.toml  LICENSE-MIT  Package.swift  README.md
Hexe.playground/: Contents.swift
Hexe.xcodeproj/: project.pbxproj
Hexe.xcodeproj/xcshareddata/xcschemes/: Hexe iOS.xcscheme  Hexe macOS.xcscheme
Scripts/: build.sh  install.sh  travis.sh
Sources/Hexe/: All.swift  Bitboard.swift  CastleRights.swift  Color.swift  Engine.swift  Hexe.swift  Piece.swift  Square.swift
Sources/Hexe/Piece/: Map.swift  Piece.swift
Sources/hexec/: hexec.c  lib.rs
Sources/hexec/include/: hexec.h  module.modulemap
Support/: Info.plist
Tests/: HexeTests.swift
